--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
   <div id="app">
-    {{date | formatDate()}}<br>
+    <!-- {{date | formatDate()}}<br>
     <button v-on:click="add()">{{numberbutton}}</button><br>
     <span v-text="apple" v-bind:class="className"></span><br>
-    <span v-html="banana"></span>
+    <span v-html="banana"></span> -->
+    <label for="">{{totalPrice}}</label>
   </div>
   <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
   <script src="./main.js"></script>
